2004-07-19 Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b38

	* Change: Added link to JoEllen Drazans Skin Page in ConfigWizard.

2004-07-18 Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b37

	* Change: Accidently reverted 1.4.5-cvs-b12 rereverted ;)

2004-07-18 Jens A. Tkotz <jens@peino.de> ; JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b36
	
	* Fix: Added css classes to have "old" layout.

	* New: Added version number and Last Update to Skins.

2004-07-18 Jens A. Tkotz <jens@peino.de> ; JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b35

	* Change: Continue Skin Changes.

	* New: added "bars002" as reference skin.

2004-07-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b34

	* Change: Minor fix for the view_album optimizations

2004-07-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b33

	* Change: Fix pseudo-register_globals to allow login/etc on PHP5
	  until it goes away.

2004-07-18 Jens A. Tkotz <jens@peino.de> ; JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b32

	* New: Added possibility to use your own header footer via a template file.

2004-07-17 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b31

	* Fix: bad quoting in util.php.

2004-07-17 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b30 

	Change: No more $HTTP*.

2004-07-17 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b29

	* Change: Switched more $HTTP Vars to superglobals. (not all)

2004-07-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b28

	* Change: Revert last change to album_permissions

	* Change: Fix PHP5 - they stopped using the old-style GET and POST
	  globals, and have switched to SuperGlobals only.  A couple session
	  and form functions needed adapting.

2004-07-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b27

	* Change: album_permissions - if $gallery->album is not set, but
	  set_albumName is, load it.

2004-07-16 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b26

        * Change: Adapted contrib/phpBB2/modules.php to fit with phpBB2 2.0.9
