@@ -1,3 +1,8 @@
+2004-07-19 JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b39
+
+	* Change: New variable to pull the thumsize to create a 
+		  defaultwidth and height for the divCell to align everything up.
+
 2004-07-19 Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b38
 
 	* Change: Added link to JoEllen Drazans Skin Page in ConfigWizard.
